--- a/css/style.css
+++ b/css/style.css
@@ -561,8 +561,12 @@ input[type="radio"].visually-hidden {
   list-style: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 26px;
   row-gap: 40px;
+}
+
+.catalog__wrap {
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .catalog--hit {
@@ -570,10 +574,14 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog__item {
-  position: relative;
+  width: 293px;
+  padding: 6px 13px 21px 13px;
+  margin: 0 auto;
+  display: flex;
+  cursor: pointer;
 }
 
-.catalog__item--hit::before {
+.box-catalog__inner--hit::before {
   content: "";
   position: absolute;
   width: 61px;
@@ -584,12 +592,21 @@ input[type="radio"].visually-hidden {
 }
 
 .box-catalog__inner {
+  position: relative;
   display: flex;
   flex-direction: column;
 }
 
+.catalog__item:hover,
+.catalog-item__button:focus .catalog__item{
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
 .catalog-item__title {
   margin: 0;
+  padding-bottom: 76px;
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
@@ -597,7 +614,7 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item__price {
-  margin: 216px 0 33px 0;
+  margin: 216px 0 21px 0;
   font-size: 45px;
   line-height: 45px;
   font-weight: 700;
@@ -617,10 +634,39 @@ input[type="radio"].visually-hidden {
   z-index: -1;
 }
 
+.catalog-item__button {
+  padding: 10px 16px 10px 16px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--basic-white);
+  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  background: linear-gradient(180deg, var(--button-gradient-1) 0%, var(--button-gradient-2) 100%);
+  box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
+  border-radius: 70px;
+  align-self: center;
+  outline: none;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.catalog__item:hover .catalog-item__button,
+.catalog-item__button:focus {
+  opacity: 1;
+}
+
+.catalog__item:hover {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
 .info__wrap {
   padding: 0 27px;
   width: 1200px;
-  margin: 0 auto 40px auto;
+  margin: -76px auto 40px auto;
 }
 
 .info {
@@ -663,8 +709,6 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 49px;
   height: 49px;
-  /* border-radius: 50%;
-  border: 2px solid var(--text-dark); */
   top: -10px;
   left: 0;
 }
